--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.2.0",
     "@libsql/client": "^0.6.2",
     "@trpc/client": "^11.0.0-rc.401",
     "@trpc/server": "^11.0.0-rc.401",
